--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TverSU timetable",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-runtime": "^6.26.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
