--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bulma": "^0.6.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-newline-to-break": "^1.0.6",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
